QA some improvements - fixed scrollbar not displaying in thumbnail view - given some margin to thumbnails so they dont look crammed - entabbed pom.xml

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/workbench.css
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/workbench.css
@@ -8,11 +8,4 @@
 .icon-view:hover, .icon-view.active {color:#fff;}
 .btn-view-separator {height:24px; border-left:1px solid #bbb;}
 
-.mgnl-workbench-thumbnail-view {
-    line-height: 24px;
-    vertical-align: bottom;
-    background-color: #FFF;
-    height: 435px;
-    padding: 20px;
-    overflow-y: auto;
-}
+.mgnl-workbench-thumbnail-view { background-color: #FFF;}
